# GW2-Sharing-is-Caring

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
GW2_Sharing_is_Caring/: crud.py  database.py  main.py  models.py  schemas.py
alembic/: env.py
alembic/versions/: c7c9f9061a71_create_user_table.py
